# gamedev-analytics-unit

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  LESSONS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-uv-каркас-раскладка-проекта-и-ci.md  1-2-env-ридер-кредов-метрики.md  1-3-вендоринг-metricaclient-с-развязкой-шва-кредов.md  1-4-безопасная-граница-дат-clamp-вчера-по-мск.md  1-5-загрузчик-каталога-схемы-и-маппинг-типов.md  1-6-cli-примитивы-жизненного-цикла-logs-api.md  2-1-соединение-duckdb-и-резолюция-путей-хранилища.md  2-2-атомарная-запись-parquet-партиции-дня.md  2-3-жёсткая-сверка-строк.md  2-4-мета-таблица-load-state-реконсиляция-мета-факт.md  2-5-лок-одного-писателя.md  (+14 more)
development-docs/: schema-catalog.csv
docs/: catalog.md  cli.md  creds.md  ingestion.md  init-and-storage.md  mcp-query.md  metrica-client.md  working-layer.md
scripts/: __init__.py
templates/: paths-to-symlink.csv
tests/: test_catalog.py  test_database_manager.py  test_dates.py  test_env_reader.py  test_gdau_mcp_server.py  test_hot_window.py  test_hot_window_live.py  test_init_project.py  test_init_scaffold.py  test_init_symlinks.py  test_load_state.py  test_logs_api_cli.py  test_logs_api_cli_live.py  test_mcp_core.py  test_metrica_client.py  test_metrica_client_live.py  test_p81_orchestrator.py  test_p81_orchestrator_live.py  test_parquet_store.py  test_paths.py  test_row_check.py  test_smoke.py  test_views.py  test_writer_lock.py
(+48 files in other folders)
